[gd_scene load_steps=4 format=3 uid="uid://card_pack_ui"]

[ext_resource type="Script" path="res://scripts/ui/card_pack_ui.gd" id="1_card_pack"]
[ext_resource type="Script" path="res://scripts/ui/particle_background.gd" id="2_particle_bg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.15, 0.3)
border_color = Color(1, 0.65, 0, 0.4)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8

[node name="CardPackUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_card_pack")

[node name="ParticleBackground" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_particle_bg")

[node name="TopBar" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 72.0
grow_horizontal = 2
z_index = 10
theme_override_constants/separation = 12

[node name="BackButton" type="Button" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(140, 44)
text = "ËøîÂõû‰∏ªËèúÂçï"

[node name="StatusLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = ""
horizontal_alignment = 1
vertical_alignment = 1
theme_override_colors/font_color = Color(1, 0.95, 0.8, 1)

[node name="GoldLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "ÈáëÂ∏Å: 0"
horizontal_alignment = 2
vertical_alignment = 1
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)

[node name="ShardsLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Á¢éÁâá: 0"
horizontal_alignment = 2
vertical_alignment = 1
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)

[node name="PackStage" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_top = 72.0

[node name="PackIcon" type="Control" parent="PackStage"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="IconPanel" type="Panel" parent="PackStage/PackIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="IconLabel" type="Label" parent="PackStage/PackIcon/IconPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 48
text = "üì¶"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RuneContainer" type="Control" parent="PackStage"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -120.0
offset_right = 120.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="OpeningAnimation" type="Control" parent="PackStage"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="FlashRect" type="ColorRect" parent="PackStage/OpeningAnimation"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.9)

[node name="CardDisplayArea" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_top = 72.0
mouse_filter = 0

[node name="OpenAnotherButton" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 400.0
offset_right = 80.0
offset_bottom = 460.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="ButtonPanel" type="Panel" parent="OpenAnotherButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="ButtonLabel" type="Label" parent="OpenAnotherButton/ButtonPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1, 0.95, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "ÂÜçÂºÄ‰∏ÄÂåÖ"
horizontal_alignment = 1
vertical_alignment = 1
